4.8.2
    2019-08-10
    Daniel Gohlke <https://github.com/extcode>

    * BUGFIX #257: change to nimut/testing-framework (v2.x)

4.8.1
    2018-08-02
    Daniel Lorenz <https://github.com/extcode>

    * BUGFIX #190: fix update shipping and payment status on same billing and shipping addresses

4.8.0
    2018-02-25
    Daniel Lorenz <https://github.com/extcode>

    * TASK #59: use frontend user data for invoice/shipping address
    * TASK #64: use contacts adresses for invoice/shipping address

4.7.9
    2018-02-25
    Daniel Lorenz <https://github.com/extcode>

    * BUGFIX #182: update sonarqube configuration to version 2.0

4.7.8
    2018-02-19
    Daniel Lorenz <https://github.com/extcode>

    * BUGFIX #179: check stock when product should be added to cart or number should be updated

4.7.7
    2018-02-18
    Daniel Lorenz <https://github.com/extcode>

    * BUGFIX #178: add translations for products module

4.7.6
    2018-02-16
    Daniel Lorenz <https://github.com/extcode>

    * BUGFIX #177: add translation for tca quantity discount frontend_user_group

4.7.5
    2018-02-16
    Daniel Lorenz <https://github.com/extcode>

    * BUGFIX #176: use user group for special and discount prices

4.7.4
    2018-02-16
    Daniel Lorenz <https://github.com/extcode>

    * BUGFIX #159: special price not working correct - render() only called once

4.7.3
    2018-02-13
    Daniel Lorenz <https://github.com/extcode>

    * BUGFIX #174: wrong price calculation for configurable products with discount prices

4.7.2
    2018-01-25
    Daniel Lorenz <https://github.com/extcode>

    * TASK #171: checkbox labels missing attribute 'for'

4.7.1
    2018-01-23
    Daniel Lorenz <https://github.com/extcode>

    * TASK #170: replace GPL-2.0+ by GPL-2.0-or-later in composer.json

4.7.0
    2018-01-22
    Daniel Lorenz <https://github.com/extcode>

    * TASK #169: add ter upload to gitlab-ci pipeline

4.6.0
    2018-01-22
    Daniel Lorenz <https://github.com/extcode>
