@@ -10,5 +10,6 @@
     </colgroup>
     <tbody>
         <f:render partial="Cart/OrderForm/Summary" arguments="{cart:cart}"/>
+        <f:render partial="Cart/ProductForm" arguments="{cart:cart}"/>
     </tbody>
 </table>
